--- a/templates/base.html
+++ b/templates/base.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <link rel="stylesheet" href="{{ url_for( 'static',  filename='style.css' ) }}">
     <!--title>Document</title-->
-    {% block title %} {% endblock %}
+    {% block title %}
+        <title>Home Page</title>
+    {% endblock %}
 </head>
 <body>
     {% block body %} {% endblock %}
