--- a/templates/posts.html
+++ b/templates/posts.html
@@ -1,9 +1,19 @@
 {% extends 'base.html' %}
 {% block head %}
-    <title>Home Page!</title>
+    <title>Post</title>
 {% endblock %}
 
 {% block body %}
-    <h1>Welcome!</h1>
+    <h1>All Posts</h1>
+
+    {% for post in posts %}
+        <h2>{{ post.title }}</h2>
+        {% if post.author %}
+            <h3>By: {{ post.author }}</h3>
+        {% else %}
+            <h3>{{ post.author }}</h3>
+        {% endif %}
+        <p>{{ post.comment }}</p>
+    {% endfor %}
 {% endblock %}
 
