--- a/templates/posts.html
+++ b/templates/posts.html
@@ -4,7 +4,16 @@
 {% endblock %}
 
 {% block body %}
-    <h1>All Posts</h1>
+    <h1>All Post</h1>
+    <hr>
+    <h2>Create a new BLog Post:</h2>
+    <form action='/posts' method='POST'>
+        <legend for="title">Title: </legend><input type="text" name="title" id="title" required>   
+        <legend for="content">Post: </legend><textarea name="content" id="content" cols="30" rows="10" required></textarea>
+        <legend for="content">Author: </legend><input type="text" name="author" id="author">
+        <input type="submit" value="Post">
+    </form>
+    <hr>
 
     {% for post in posts %}
         <h2>{{ post.title }}</h2>
@@ -13,7 +22,9 @@
         {% else %}
             <h3>{{ post.author }}</h3>
         {% endif %}
-        <p>{{ post.comment }}</p>
+        <p>{{ post.content }}</p>
+        <a href='/posts/delete/{{ post.id }}'>Delete</a>
+        <a href='/posts/edit/{{ post.id }}'>Edit</a>
     {% endfor %}
 {% endblock %}
 
